--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "bhumipanenjoan",
   "private": true,
   "version": "0.0.0",
+  "homepage": "https://bhumipanenjoan.co.id",
   "type": "module",
   "scripts": {
     "dev": "vite",
